# dmtrag

./: .gitignore  Qwen2_5_7B_Alpaca_fintune.ipynb  Qwen3_14B_finetune.ipynb  README.md  get_text_embedding.py  main.py  mineru_pipeline_all.py  pipeline_all.py  pyproject.toml  rag_from_page_chunks.py  requirements.txt  spark_data_process.ipynb  spark_model_finetune.ipynb
model_train_outputs/checkpoint-60/: README.md
outputs/: README.md
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
